fix: large emoji's getting cut off

--- a/web/home.scss
+++ b/web/home.scss
@@ -83,6 +83,7 @@
       .txt.just-emojis {
         line-height: 1em;
         font-size: 4em;
+        overflow: visible;
       }
       .name {
         font-weight: 700;
